# python-daachorse

./: .readthedocs.yaml  Cargo.toml  README.md  daachorse.pyi  noxfile.py  pyproject.toml  requirements-dev.txt
.github/workflows/: CI.yml
docs/source/: api.rst  conf.py  examples.rst  index.rst
src/: lib.rs
tests/: dataset.py  test_automaton.py  test_bench_unidic.py  test_bench_words_100000.py  test_bytewise.py  test_charwise.py
