[package]
name = "python-daachorse"
version = "0.1.5"
edition = "2021"
authors = [
    "Koichi Akabe <vbkaisetsu@gmail.com>",
]
description = "A fast implementation of the Aho-Corasick algorithm using the compact double-array data structure"
readme = "README.md"
license = "MIT OR Apache-2.0"

[lib]
name = "daachorse"
crate-type = ["cdylib"]

[dependencies]
daachorse = "1.0.0" # MIT or Apache-2.0
pyo3 = { version = "0.17.1", features = ["extension-module"] } # MIT or Apache-2.0

[profile.release]
lto = true
