[package]
name = "python-daachorse"
version = "0.1.7"
edition = "2021"
authors = [
    "Koichi Akabe <vbkaisetsu@gmail.com>",
]
description = "A fast implementation of the Aho-Corasick algorithm using the compact double-array data structure"
readme = "README.md"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/daac-tools/python-daachorse"
repository = "https://github.com/daac-tools/python-daachorse"

[lib]
name = "daachorse"
crate-type = ["cdylib"]

[dependencies]
daachorse = "1.0.0" # MIT or Apache-2.0
pyo3 = { version = "0.18.0", features = ["extension-module"] } # Apache-2.0

[profile.release]
lto = true
