[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "daachorse"
version = "0.2.2"
description = "🐎 A fast implementation of the Aho-Corasick algorithm using the compact double-array data structure"
readme = "README.md"
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Rust",
  "Topic :: Software Development :: Libraries",
  "Topic :: Text Processing",
]

[project.optional-dependencies]
docs = [
  "sphinx-rtd-theme",
]
